--- a/example/public/index.html
+++ b/example/public/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    @include '@layout/header.html';
     <img src="{{ @image }}/test/test.png">
 </body>
 </html>
