[feat] 完成pulgin的模板引入

--- a/example/public/index.html
+++ b/example/public/index.html
@@ -7,7 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    @include '@layout/header.html';
-    <img src="{{ @image }}/test/test.png">
+    <% include @layout/header.html %>
+    <img src="<% @image %>/test/test.png">
+    <% include @layout/footer.html %>
+    <script>
+        
+    </script>
 </body>
 </html>
